--- a/css/screen.css
+++ b/css/screen.css
@@ -1,2 +1,11 @@
 @import "style.css";
+@import "clearfix.css";
 @import "layout.css";
+
+/* Prevent the text contents of draggable elements from being selectable. */
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
