--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -6,10 +6,10 @@
 {% case page.simple  %}
 {% when 'production' %}
 
-  <link rel="stylesheet" href="/css/screen.css?v=1" type="text/css" media="screen, projection">
-  <link rel="stylesheet" href="/css/print.css?v=1" type="text/css" media="print">
+  <link rel="stylesheet" href="css/screen.css?v=1" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="css/print.css?v=1" type="text/css" media="print">
   <!--[if IE]><link rel="stylesheet" href="/css/ie.css?v=1" type="text/css" media="screen, projection"><![endif]-->
-  <link rel="stylesheet" href="/css/common.css?v=1" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="css/common.css?v=1" type="text/css" media="screen, projection">
 
 {% when 'development' %}
   <link rel="stylesheet/less" type="text/css" href="/less/screen.less" media="screen" title="screen_css"/>
@@ -20,7 +20,7 @@
 {% when 'production' %}
 
 	{% unless page.no_themes %}
-  <link rel="stylesheet" type="text/css" href="/css/{{ page.theme }}.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="css/{{ page.theme }}.css" media="screen">
 	{% endunless %}
 
   {% include flawless_production.html %}
@@ -60,9 +60,9 @@
 {% endif %}
   <script>!window.jQuery && document.write('<script src="/js/libs/jquery-1.5.1.min.js"><\/script>')</script>
 
-  <script type="text/javascript" src="/js/libs/jQuery/jquery.mousewheel.js"></script>
-  <script type="text/javascript" src="/js/jScrollPane-1.2.3.min.js"></script>
-  <script type="text/javascript" src="/js/site.js"></script>
+  <script type="text/javascript" src="js/libs/jQuery/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="js/jScrollPane-1.2.3.min.js"></script>
+  <script type="text/javascript" src="js/site.js"></script>
 {% if page.myscripts %}
   <script type="text/javascript" src="{{page.myscripts}}"></script>
 {% endif %}
