different path fix

--- a/_includes/ipad_noscale_html5_head.html
+++ b/_includes/ipad_noscale_html5_head.html
@@ -16,8 +16,9 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
 <meta name="author" content="{{ site.author }}">
 
 <!--[if IE]>
-  <script src="/js/libs/html5.js"></script>
+  <script src="js/libs/html5.js"></script>
 <![endif]-->
 <!-- All JavaScript at the bottom, except for Modernizr. -->
+<script src="/ct4demo1/js/libs/modernizr-1.7.min.js"></script>
 <script src="/js/libs/modernizr-1.7.min.js"></script>
 
