--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -6,10 +6,15 @@
 {% case page.simple  %}
 {% when 'production' %}
 
-  <link rel="stylesheet" href="css/screen.css?v=1" type="text/css" media="screen, projection">
-  <link rel="stylesheet" href="css/print.css?v=1" type="text/css" media="print">
+  <link rel="stylesheet" href="/ct4demo1/css/screen.css?v=1" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/ct4demo1/css/print.css?v=1" type="text/css" media="print">
+  <!--[if IE]><link rel="stylesheet" href="/ct4demo1/css/ie.css?v=1" type="text/css" media="screen, projection"><![endif]-->
+  <link rel="stylesheet" href="/ct4demo1/css/common.css?v=1" type="text/css" media="screen, projection">
+
+  <link rel="stylesheet" href="/css/screen.css?v=1" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/css/print.css?v=1" type="text/css" media="print">
   <!--[if IE]><link rel="stylesheet" href="/css/ie.css?v=1" type="text/css" media="screen, projection"><![endif]-->
-  <link rel="stylesheet" href="css/common.css?v=1" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/css/common.css?v=1" type="text/css" media="screen, projection">
 
 {% when 'development' %}
   <link rel="stylesheet/less" type="text/css" href="/less/screen.less" media="screen" title="screen_css"/>
@@ -20,7 +25,7 @@
 {% when 'production' %}
 
 	{% unless page.no_themes %}
-  <link rel="stylesheet" type="text/css" href="css/{{ page.theme }}.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="/ct4demo1/css/{{ page.theme }}.css" media="screen">
 	{% endunless %}
 
   {% include flawless_production.html %}
@@ -33,7 +38,7 @@
 {% endcase %}
 
   {% include css_browser_selector.html %}    
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/ct4demo1/atom.xml">
 
 {% if site.y_key %}
   <META name="y_key" content="{{ site.y_key }}" />
@@ -60,10 +65,14 @@
 {% endif %}
   <script>!window.jQuery && document.write('<script src="/js/libs/jquery-1.5.1.min.js"><\/script>')</script>
 
-  <script type="text/javascript" src="js/libs/jQuery/jquery.mousewheel.js"></script>
-  <script type="text/javascript" src="js/jScrollPane-1.2.3.min.js"></script>
-  <script type="text/javascript" src="js/site.js"></script>
+  <script type="text/javascript" src="/ct4demo1/js/libs/jQuery/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="/ct4demo1/js/jScrollPane-1.2.3.min.js"></script>
+  <script type="text/javascript" src="/ct4demo1/js/site.js"></script>
+  <script type="text/javascript" src="/js/libs/jQuery/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="/js/jScrollPane-1.2.3.min.js"></script>
+  <script type="text/javascript" src="/js/site.js"></script>
 {% if page.myscripts %}
+  <script type="text/javascript" src="/ct4demo1/{{page.myscripts}}"></script>
   <script type="text/javascript" src="{{page.myscripts}}"></script>
 {% endif %}
 </body>
