--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -63,7 +63,7 @@
   <!-- Grab Google CDN's jQuery. fall back to local if neccessary -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 {% endif %}
-  <script>!window.jQuery && document.write('<script src="/js/libs/jquery-1.5.1.min.js"><\/script>')</script>
+  <script>!window.jQuery && document.write(<script src="/ct4demo1/js/libs/jquery-1.5.1.min.js"><\/script>'+'<script src="/js/libs/jquery-1.5.1.min.js"><\/script>')</script>
 
   <script type="text/javascript" src="/ct4demo1/js/libs/jQuery/jquery.mousewheel.js"></script>
   <script type="text/javascript" src="/ct4demo1/js/jScrollPane-1.2.3.min.js"></script>
