drag-n-drop to destinations for panels

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -58,6 +58,8 @@
 {{ content }}
 
   <!-- JavaScript -->
+  <script type="text/javascript" src="/ct4demo1/js/mylibs/builtin.js"></script>
+  <script type="text/javascript" src="/js/mylibs/builtin.js"></script>
 
 {% if page.googlecdn %}
   <!-- Grab Google CDN's jQuery. fall back to local if neccessary -->
@@ -67,10 +69,8 @@
 
   <script type="text/javascript" src="/ct4demo1/js/libs/jQuery/jquery.mousewheel.js"></script>
   <script type="text/javascript" src="/ct4demo1/js/jScrollPane-1.2.3.min.js"></script>
-  <script type="text/javascript" src="/ct4demo1/js/site.js"></script>
   <script type="text/javascript" src="/js/libs/jQuery/jquery.mousewheel.js"></script>
   <script type="text/javascript" src="/js/jScrollPane-1.2.3.min.js"></script>
-  <script type="text/javascript" src="/js/site.js"></script>
 {% if page.myscripts %}
   <script type="text/javascript" src="/ct4demo1/{{page.myscripts}}"></script>
   <script type="text/javascript" src="{{page.myscripts}}"></script>
