--- a/layouts/L5.html
+++ b/layouts/L5.html
@@ -1,8 +1,9 @@
 ---
-title: Breakout Demo
+title: Layout 5 - Breakout Demo
 layout: master
 myscripts: /js/mylibs/demo.js
 simple: production
+window_name: layout-L5
 ---
 <div class="indicators topleft"></div>
 
