--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -71,8 +71,10 @@
   <script>!window.jQuery && document.write('<script src="/ct4demo1/js/libs/jquery-1.5.1.min.js"><\/script>'+'<script src="/js/libs/jquery-1.5.1.min.js"><\/script>')</script>
 
   <script type="text/javascript" src="/ct4demo1/js/libs/jQuery/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="/ct4demo1/js/libs/jQuery/jquery.jscrollpane.min.js"></script>
   <script type="text/javascript" src="/ct4demo1/js/jScrollPane-1.2.3.min.js"></script>
   <script type="text/javascript" src="/js/libs/jQuery/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="/js/libs/jQuery/jquery.jscrollpane.min.js"></script>
   <script type="text/javascript" src="/js/jScrollPane-1.2.3.min.js"></script>
 {% if page.myscripts %}
   <script type="text/javascript" src="/ct4demo1/{{page.myscripts}}"></script>
