--- a/_includes/upper_panels.html
+++ b/_includes/upper_panels.html
@@ -1,17 +1,104 @@
-		<div class="panel clearfix" id="panel-1" draggable="true">
+		<div class="leftpanel clearfix" id="leftpanel-1">
+			<div class="panel-content">
+			<labels>Search</label>
+			<input placeholder="Product or Asset">
+			<dl>
+			<dt>&gt;</dt>Top Level</dd>
+			<dt>&gt;</dt><dd>Top Level</dd>
+			<dt>&gt;</dt><dd>Top Level</dd>
+			<dt>&gt;</dt><dd>Nested Level</dd>
+			<dt>&gt;</dt><dd>Nested Level</dd>
+			</dl>
+			</div>
+		</div>
+		<div class="leftpanel clearfix" id="leftpanel-2">
+			<div class="panel-content">
+			two
+			<dl>
+			<dt>Amount</dt><dd><input value="Amount"></dd>
+			<dt>Price</dt><dd><input value="Price"></dd>
+			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
+			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
+			</dl>
+			</div>
+		</div>
+		<div class="leftpanel clearfix" id="leftpanel-3">
+			<div class="panel-content">
+			Chat
+			<dl>
+			<dt>A:</dt><dd>dfgdfgfd</dd>
+			<dt>B:</dt><dd>ertewrtert</dd>
+			<dt>A:</dt><dd>iyiuyuiu</dd>
+			<dt>B:</dt><dd>qwerwq</dd>
+			</dl>
+			</div>
+		</div>
+
+		<div class="rightpanel clearfix" id="rightpanel-1">
+			<div class="panel-content">
+			one
+			<dl>
+			<dt>Amount</dt><dd><input value="Amount"></dd>
+			<dt>Price</dt><dd><input value="Price"></dd>
+			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
+			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
+			</dl>
+			</div>
+		</div>
+		<div class="rightpanel clearfix" id="rightpanel-2">
+			<div class="panel-content">
+			two
+			<dl>
+			<dt>Amount</dt><dd><input value="Amount"></dd>
+			<dt>Price</dt><dd><input value="Price"></dd>
+			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
+			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
+			</dl>
+			</div>
+		</div>
+		<div class="rightpanel clearfix" id="rightpanel-3">
+			<div class="panel-content">
+			three
+			<dl>
+			<dt>Amount</dt><dd><input value="Amount"></dd>
+			<dt>Price</dt><dd><input value="Price"></dd>
+			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
+			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
+			</dl>
+			</div>
+		</div>
+
+		<div class="leftcontrols sidecontrols">
+		<button class="" data-pop-panel="leftpanel-1"> 1 </button>
+		<button class="" data-pop-panel="leftpanel-2"> 2 </button>
+		<button class="" data-pop-panel="leftpanel-3"> 3 </button>
+		</div>
+		<div class="rightcontrols sidecontrols">
+		<button class="" data-pop-panel="rightpanel-1"> 1 </button>
+		<button class="" data-pop-panel="rightpanel-2"> 2 </button>
+		<button class="" data-pop-panel="rightpanel-3"> 3 </button>
+		</div>
+
+		<div class="panel mainpanel clearfix" id="panel-1" draggable="true">
 			<button class="breakout">Breakout</button>
-		<table>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		</table></div>
+			<div class="panel-content">
+				<table>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				</table>
+			</div>
+		</div>
 	
-		<div class="panel clearfix" id="panel-2" draggable="true">
+		<div class="panel mainpanel clearfix" id="panel-2" draggable="true">
 			<button class="breakout">Breakout</button>
-		<table>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-		</table></div>
+			<div class="panel-content">
+				<table>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+				</table>
+			</div>
+		</div>
