--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,7 @@
 .indicators {
 	position: absolute;
 	overflow: visible;
+	background-image: url(/images/top-bg.png);
 }
 .indicators.topleft {
 	left:0; top:0;
@@ -12,6 +13,11 @@
 }
 .indicators.topright {
 	right:0; top:0;
+}
+.indicators.topbg {
+	top:0;
+	left:0; right:0;
+	height:50px;
 }
 
 .drop-area {
@@ -29,18 +35,22 @@
 	position: absolute;
 	left:0;
 	width:100%;
-	top: 40px;
-	bottom: 20px;
+	top: 50px;
+	bottom: 50px;
 	overflow: hidden;
 }
 
 /* Upper and Lower */
 .upper,.lower,.divider {
-	width:100%;
+	/* Don't do to allow margins: width:100%; */
 }
 .upper,.lower {
 	position: relative;
 	overflow: hidden;
+	-moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
 }
 .divided-100-0 .upper {
 	height: 100%;
@@ -74,11 +84,109 @@
 /* divider */
 .divider {
 	position: relative;
-	top: -5px; height: 10px;
+	top: -12px; height: 25px;
 	background: #448;
 	z-index: 100;
 }
 
+.upper .panel-content {
+	margin-bottom: 12px;
+}
+.lower .panel-content {
+	margin-top: 12px;
+}
+.divided-0-100 .lower .panel-content {
+	margin-top: 25px;
+}
+.divided-0-100 .divider {
+	top:0;
+}
+.divided-100-0 .upper .panel-content {
+	margin-bottom: 25px;
+}
+.divided-100-0 .divider {
+	top:-25px;
+}
+
+/* SIDE PANELS */
+.upper {
+	margin-left:50px;
+	margin-right:50px;
+	overflow:visible;
+}
+.upper .leftcontrols {
+	position:absolute;
+	top:0; bottom:0;
+	left: -50px;
+	width:50px;
+	text-align: center;
+	border-right:1px dotted black;
+	background-color:white;
+	z-index: 100; /* above toppanel */
+}
+.upper .rightcontrols {
+	position:absolute;
+	top:0; bottom:0;
+	right: -50px;
+	width:50px;
+	text-align: center;
+	border-left:1px dotted black;
+	background-color:white;
+	z-index: 100; /* above toppanel */
+}
+
+.upper .leftcontrols button,
+.upper .rightcontrols button {
+	width:30px;
+	margin:5px;
+	/* use text-align for now, display:block; */
+}
+.leftpanel,.rightpanel {
+	position:absolute;
+	top:0; bottom:0;
+	-moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+/* 200px */
+.leftpanel {
+	left:-200px; width:200px;
+}
+.rightpanel {
+	right:-200px; width:200px;
+}
+
+.leftopen .leftpanel.toppanel {
+	left:0;
+}
+.rightopen .rightpanel.toppanel {
+	right:0;
+}
+
+.toppanel {
+	z-index:50;
+}
+
+.mainpanel {
+	position: absolute;
+	top:0; bottom:0;
+	left:0; right:0;
+	-moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+.leftopen .mainpanel {
+	left:200px;
+}
+.rightopen .mainpanel {
+	right:200px;
+}
+
+.lower {
+	overflow:visible;
+}
 
 /* PANEL */
 .panel {
