--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,6 @@
 .indicators {
 	position: absolute;
 	overflow: visible;
-	background-image: url(/images/top-bg.png);
 }
 .indicators.topleft {
 	left:0; top:0;
@@ -18,6 +17,13 @@
 	top:0;
 	left:0; right:0;
 	height:50px;
+	background-image: url(/images/top-bg.png);
+}
+.indicators.bottombg {
+	bottom:0;
+	left:0; right:0;
+	height:50px;
+	background-color: yellow;
 }
 
 .drop-area {
