front panel back in front added mockup images

--- a/_includes/upper_active_panels.html
+++ b/_includes/upper_active_panels.html
@@ -69,9 +69,10 @@
 		</div>
 
 		<div class="leftcontrols sidecontrols">
-		<button class="" data-pop-panel="leftpanel-1"> 1 </button>
+		<button class="active-finder" data-pop-panel="leftpanel-1">  </button>
 		<button class="" data-pop-panel="leftpanel-2"> 2 </button>
-		<button class="" data-pop-panel="leftpanel-3"> 3 </button>
+		<button class="chat" data-pop-panel="leftpanel-3">  </button>
+		<button class="help" data-pop-panel="leftpanel-4">  </button>
 		</div>
 		<div class="rightcontrols sidecontrols">
 		<button class="" data-pop-panel="rightpanel-1"> 1 </button>
