--- a/scss/mainpanel.scss
+++ b/scss/mainpanel.scss
@@ -19,7 +19,7 @@
     /* overflow:hidden; */ overflow: auto;
     background-color: white;
     
-	.frontpanel {
+	&.frontpanel {
 		z-index: 50;
 	}
     
