--- a/_includes/upper_panels.html
+++ b/_includes/upper_panels.html
@@ -1,71 +1,21 @@
 		<div class="leftpanel clearfix" id="leftpanel-1">
-			<div class="panel-content">
-			<labels>Search</label>
-			<input placeholder="Product or Asset">
-			<dl>
-			<dt>&gt;</dt>Top Level</dd>
-			<dt>&gt;</dt><dd>Top Level</dd>
-			<dt>&gt;</dt><dd>Top Level</dd>
-			<dt>&gt;</dt><dd>Nested Level</dd>
-			<dt>&gt;</dt><dd>Nested Level</dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include search_panel.html %}</div>
 		</div>
 		<div class="leftpanel clearfix" id="leftpanel-2">
-			<div class="panel-content">
-			two
-			<dl>
-			<dt>Amount</dt><dd><input value="Amount"></dd>
-			<dt>Price</dt><dd><input value="Price"></dd>
-			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
-			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include watchlists_panel.html %}</div>
 		</div>
 		<div class="leftpanel clearfix" id="leftpanel-3">
-			<div class="panel-content">
-			Chat
-			<dl>
-			<dt>A:</dt><dd>dfgdfgfd</dd>
-			<dt>B:</dt><dd>ertewrtert</dd>
-			<dt>A:</dt><dd>iyiuyuiu</dd>
-			<dt>B:</dt><dd>qwerwq</dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include chat_panel.html %}</div>
 		</div>
 
 		<div class="rightpanel clearfix" id="rightpanel-1">
-			<div class="panel-content">
-			one
-			<dl>
-			<dt>Amount</dt><dd><input value="Amount"></dd>
-			<dt>Price</dt><dd><input value="Price"></dd>
-			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
-			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include ticket_panel.html %}</div>
 		</div>
 		<div class="rightpanel clearfix" id="rightpanel-2">
-			<div class="panel-content">
-			two
-			<dl>
-			<dt>Amount</dt><dd><input value="Amount"></dd>
-			<dt>Price</dt><dd><input value="Price"></dd>
-			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
-			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include ticket_panel.html %}</div>
 		</div>
 		<div class="rightpanel clearfix" id="rightpanel-3">
-			<div class="panel-content">
-			three
-			<dl>
-			<dt>Amount</dt><dd><input value="Amount"></dd>
-			<dt>Price</dt><dd><input value="Price"></dd>
-			<dt>Terms</dt><dd><select><option>1D</option><option>2D</option><option>3D</option><option>1W</option></select></dd>
-			<dd><textarea>sfsdf sfsd dsfdsf</textarea></dd>
-			</dl>
-			</div>
+			<div class="panel-content">{% include ticket_panel.html %}</div>
 		</div>
 
 		<div class="leftcontrols sidecontrols">
