rows as includes

--- a/_includes/upper_active_panels.html
+++ b/_includes/upper_active_panels.html
@@ -46,10 +46,8 @@
 							<div>&#9660; First Component</div>
 							<div>
 								<table>
-								<tr><td><input class="focusable" size="2"></td><td class="focusable">b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 								</table>
 							</div>
 						</div>
@@ -60,10 +58,8 @@
 							<div>&#9654; Second Component</div>
 							<div>
 								<table>
-								<tr><td><input class="focusable" size="2"></td><td class="focusable">b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 								</table>
 							</div>
 						</div>
@@ -78,10 +74,8 @@
 							<div>&#9654; Third Component</div>
 							<div>
 								<table>
-								<tr><td><input class="focusable" size="2"></td><td class="focusable">b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 								</table>
 							</div>
 						</div>
@@ -92,10 +86,8 @@
 							<div>&#9654; Third Component</div>
 							<div>
 								<table>
-								<tr><td><input class="focusable" size="2"></td><td class="focusable">b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-								<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+								{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 								</table>
 							</div>
 						</div>
