--- a/_includes/upper_panels.html
+++ b/_includes/upper_panels.html
@@ -33,10 +33,8 @@
 			<button class="breakout">Breakout</button>
 			<div class="panel-content">
 				<table>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+					{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+					{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 				</table>
 			</div>
 		</div>
@@ -45,10 +43,8 @@
 			<button class="breakout">Breakout</button>
 			<div class="panel-content">
 				<table>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
-				<tr><td>a</td><td>b</td><td>c</td><td>d</td><td>e</td></tr>
+					{% include focusable_table_row.html %} {% include focusable_table_row.html %}
+					{% include focusable_table_row.html %} {% include focusable_table_row.html %}
 				</table>
 			</div>
 		</div>
