--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,38 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+	
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+	
     <title>{% block title %}main{% end %}{% block sitetitle %} - {{ SITE_TITLE }}{% end %}</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="{{ site.description }}">
+	<meta name="author" content="{{ site.author }}">
+	
+	<!--[if IE]>
+	  <script src="js/libs/html5.js"></script>
+	<![endif]-->
+	<!-- All JavaScript at the bottom, except for Modernizr. -->
+	<script src="/js/libs/modernizr-1.7.min.js"></script>
+	
   
   <link rel="stylesheet" href="/css/screen.css?v=1" type="text/css" media="screen, projection">
   <link rel="stylesheet" href="/css/print.css?v=1" type="text/css" media="print">
   <!--[if IE]><link rel="stylesheet" href="/css/ie.css?v=1" type="text/css" media="screen, projection"><![endif]-->
-  <link rel="stylesheet" href="/css/common.css?v=1" type="text/css" media="screen, projection">
+
   <style type="text/css" media="screen">{% block screenstyle %}{% end %}</style>
   <style type="text/css" media="print">{% block printstyle %}{% end %}</style>
 {% block addhead %}{% end %}{% block extra_head %}{% end %}
 
 </head>
-<body>{% block body%}
+<!-- http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
+<!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
+<!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
+<!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
+<!--[if gt IE 9]>  <body>             <![endif]-->
+<!--[if !IE]><!--> <body>         <!--<![endif]-->
+{% block body%}
 
 	<header>{% block header %}{% end%}</header>
 	<article>{% block article %}{% end%}</article>
@@ -21,8 +40,9 @@
 	
 {% end %}
 
-<script src="{{ MEDIA_URL }}/js/jquery.js" type="text/javascript"></script>
-<!-- <script src="{{ MEDIA_URL }}/js/jquery.ui.js" type="text/javascript"></script> -->
+  	<script src="/js/mylibs/builtin.js" type="text/javascript"></script>
+	<script src="/js/libs/jquery-1.5.1.min.js" type="text/javascript"></script>
+	<!-- <script src="{{ MEDIA_URL }}/js/jquery.ui.js" type="text/javascript"></script> -->
 {% block bodyscripts %}{% end %}
 </body>
 </html>
